# api/v1/swagger.yaml
@@ -4778,6 +4778,307 @@ paths:
             $ref: '#/definitions/ErrorResponse'
 
 # =============================================================================
+  /users/{key}/tokens:
+    x-swagger-router-controller: userTokens
+    get:
+      security:
+        - jwt: []
+      summary: Retrieve metadata about the specified token.
+      tags: [ tokens ]
+      description: >-
+        Retrieve metadata about the users' tokens. You may also optionally
+        specify a list of fields to include in the response. If the Refocus
+        configuration parameter `useAccessToken` is set to `true`, you must
+        include an `Authorization` request header with your
+        [JSON Web Token](https://tools.ietf.org/html/rfc7519) (JWT) as the
+        value.
+      operationId: getUserTokens
+      parameters:
+        -
+          name: key
+          in: path
+          description: >-
+            The id or username of the user whose tokens you to retrieve.
+          required: true
+          type: string
+        -
+          $ref: "#/parameters/TokensFieldsParam"
+      responses:
+        200:
+          description: >-
+            Success, returns a list of tokens.
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/TokensResponse"
+        400:
+          description: >-
+            Invalid arguments. Please review the response for error details.
+          schema:
+            $ref: '#/definitions/BadRequest'
+        401:
+          description: >-
+            Caller did not supply credentials or did not provide the correct
+            credentials. If you are using an API key, it may be invalid or your
+            Authorization header may be malformed.
+          schema:
+            $ref: '#/definitions/AuthenticationError'
+        404:
+          description: >-
+            The resource you requested does not exist.
+          schema:
+            $ref: '#/definitions/ResourceNotFoundError'
+        default:
+          description: >-
+            An unexpected error occurred. Please review the response for error
+            details.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+
+# =============================================================================
+  /users/{key}/tokens/{tokenName}:
+    x-swagger-router-controller: userTokens
+    delete:
+      security:
+        - jwt: []
+      summary: Delete the specified token
+      tags: [ tokens ]
+      description: >-
+        Given a user name and token name, delete the specified token.
+      operationId: deleteUserToken
+      parameters:
+        -
+          name: key
+          in: path
+          description: >-
+            The id or name of the user.
+          required: true
+          type: string
+        -
+          name: tokenName
+          in: path
+          description: >-
+            The name of the token to delete.
+          required: true
+          type: string
+      responses:
+        200:
+          description: >-
+            Success, returns the metadata for the deleted token.
+          schema:
+            $ref: "#/definitions/TokensResponse"
+        400:
+          description: >-
+            Invalid arguments. Please review the response for error details.
+          schema:
+            $ref: '#/definitions/BadRequest'
+        401:
+          description: >-
+            Caller did not supply credentials or did not provide the correct
+            credentials. If you are using an API key, it may be invalid or your
+            Authorization header may be malformed.
+          schema:
+            $ref: '#/definitions/AuthenticationError'
+        403:
+          description: >-
+            Caller is not authorized to delete token. While your authentication
+            is valid, the authenticated user or token does not have permission
+            to perform this action.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        404:
+          description: >-
+            The resource you requested does not exist.
+          schema:
+            $ref: '#/definitions/ResourceNotFoundError'
+        default:
+          description: >-
+            An unexpected error occurred. Please review the response for error
+            details.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+    get:
+      security:
+        - jwt: []
+      summary: Retrieve metadata about the specified token
+      tags: [ tokens ]
+      description: >-
+        Retrieve metadata about the specified token. You may also optionally
+        specify a list of fields to include in the response. If the Refocus
+        configuration parameter `useAccessToken` is set to `true`, you must
+        include an `Authorization` request header with your
+        [JSON Web Token](https://tools.ietf.org/html/rfc7519) (JWT) as the
+        value.
+      operationId: getUserToken
+      parameters:
+        -
+          name: key
+          in: path
+          description: >-
+            The id or name of the user.
+          required: true
+          type: string
+        -
+          name: tokenName
+          in: path
+          description: >-
+            The name of the token to delete.
+          required: true
+          type: string
+        -
+          $ref: "#/parameters/TokensFieldsParam"
+      responses:
+        200:
+          description: Success, returns metadata about the specified token.
+          schema:
+            $ref: "#/definitions/TokensResponse"
+        400:
+          description: >-
+            Invalid arguments. Please review the response for error details.
+          schema:
+            $ref: '#/definitions/BadRequest'
+        401:
+          description: >-
+            Caller did not supply credentials or did not provide the correct
+            credentials. If you are using an API key, it may be invalid or your
+            Authorization header may be malformed.
+          schema:
+            $ref: '#/definitions/AuthenticationError'
+        404:
+          description: >-
+            The resource you requested does not exist.
+          schema:
+            $ref: '#/definitions/ResourceNotFoundError'
+        default:
+          description: >-
+            An unexpected error occurred. Please review the response for error
+            details.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+
+# =============================================================================
+  /users/{key}/tokens/{tokenName}/revoke:
+    x-swagger-router-controller: userTokens
+    post:
+      security:
+        - jwt: []
+      summary: Revoke access for the specified token
+      tags: [ token ]
+      description: >-
+        Revoke access for the specified token. If the Refocus configuration
+        parameter `useAccessToken` is set to `true`, you must include an
+        `Authorization` request header with your 
+        [JSON Web Token](https://tools.ietf.org/html/rfc7519) (JWT) as the 
+        value. You can get a token using `POST /v1/register` or
+        `POST /v1/token`.
+      operationId: revokeTokenByName
+      parameters:
+        -
+          name: key
+          in: path
+          description: >-
+            The id or name of the user.
+          required: true
+          type: string
+        -
+          name: tokenName
+          in: path
+          description: >-
+            The name of the token to delete.
+          required: true
+          type: string
+      responses:
+        200:
+          description: Success, token permission revoked.
+          schema:
+            $ref: "#/definitions/TokensResponse"
+        400:
+          description: >-
+            Invalid arguments, e.g. trying to revoke a token which had already
+            been revoked. Please review the response for error details.
+          schema:
+            $ref: '#/definitions/BadRequest'
+        401:
+          description: >-
+            Caller did not supply credentials or did not provide the correct
+            credentials. If you are using an API key, it may be invalid or your
+            Authorization header may be malformed.
+          schema:
+            $ref: '#/definitions/AuthenticationError'
+        404:
+          description: >-
+            The resource you requested does not exist.
+          schema:
+            $ref: '#/definitions/ResourceNotFoundError'
+        default:
+          description: >-
+            An unexpected error occurred. Please review the response for error
+            details.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+
+# =============================================================================
+  /users/{key}/tokens/{tokenName}/restore:
+    x-swagger-router-controller: userTkens
+    post:
+      security:
+        - jwt: []
+      summary: Restore access for the specified token
+      tags: [ token ]
+      description: >-
+        Restore access for the specified token if access had previously been
+        revoked. If the Refocus configuration parameter `useAccessToken` is set
+        to `true`, you must include an `Authorization` request header with your
+        [JSON Web Token](https://tools.ietf.org/html/rfc7519) (JWT) as the
+        value. You can get a token using `POST /v1/register` or
+        `POST /v1/token`.
+      operationId: restoreTokenByName
+      parameters:
+        -
+          name: key
+          in: path
+          description: >-
+            The id or name of the user.
+          required: true
+          type: string
+        -
+          name: tokenName
+          in: path
+          description: >-
+            The name of the token to delete.
+          required: true
+          type: string
+      responses:
+        200:
+          description: Success, token permission restored.
+          schema:
+            $ref: "#/definitions/TokensResponse"
+        400:
+          description: >-
+            Invalid arguments, e.g. trying to restore a token which had not
+            been revoked. Please review the response for error details.
+          schema:
+            $ref: '#/definitions/BadRequest'
+        401:
+          description: >-
+            Caller did not supply credentials or did not provide the correct
+            credentials. If you are using an API key, it may be invalid or your
+            Authorization header may be malformed.
+          schema:
+            $ref: '#/definitions/AuthenticationError'
+        404:
+          description: >-
+            The resource you requested does not exist.
+          schema:
+            $ref: '#/definitions/ResourceNotFoundError'
+        default:
+          description: >-
+            An unexpected error occurred. Please review the response for error
+            details.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+
+# =============================================================================
 definitions:
 
   AuthenticationError:
